--- a/portofolio.html
+++ b/portofolio.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <div class="header">
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Project</a>
+            <a href="#">Contact</a>
+        </nav>
+    
     </div>
     <div class="section"></div>
     <div class="footer"></div>
