--- a/portofolio.html
+++ b/portofolio.html
@@ -16,7 +16,10 @@
         </nav>
     
     </div>
-    <div class="section"></div>
+    <div class="section">
+        <img src="https://cdn-icons-png.flaticon.com/512/1250/1250689.png" alt="">
+        <p>Hello i'm Ilham fw a passionate web developer welcome to my portofolio</p>
+    </div>
     <div class="footer"></div>
 </body>
 </html>
