--- a/portofolio.html
+++ b/portofolio.html
@@ -19,7 +19,20 @@
     <div class="section">
         <img src="https://cdn-icons-png.flaticon.com/512/1250/1250689.png" alt="">
         <p>Hello i'm Ilham fw a passionate web developer welcome to my portofolio</p>
+        <article>
+            <h2>Project 1</h2>
+            <p>Description Project 1</p>
+            <h2>Project 2</h2>
+            <p>Description Project 2</p>
+            <h2>Project 3</h2>
+            <p>Description Project 3</p>
+        </article>
     </div>
-    <div class="footer"></div>
+    <div class="footer">
+        <p>c 2023 Ilham Fiqri Wirdayawan</p>
+        <a href="#">github</a>
+        <a href="#">facebook</a>
+        <a href="#">LinkedIn</a>
+    </div>
 </body>
 </html>
