--- a/portofolio.html
+++ b/portofolio.html
@@ -17,21 +17,26 @@
     
     </div>
     <div class="section">
-        <img src="https://cdn-icons-png.flaticon.com/512/1250/1250689.png" alt="">
-        <p>Hello i'm Ilham fw a passionate web developer welcome to my portofolio</p>
+            <img src="https://cdn-icons-png.flaticon.com/512/1250/1250689.png" alt="">
+            <p style="width: 50px; height: 50px;">Hello i'm Ilham fw a passionate web developer welcome to my portofolio</p><br>         
+    </div>
+    <div>
         <article>
-            <h2>Project 1</h2>
-            <p>Description Project 1</p>
-            <h2>Project 2</h2>
-            <p>Description Project 2</p>
-            <h2>Project 3</h2>
-            <p>Description Project 3</p>
+            <div class="project-1" style="border: 1px solid #ccc;">
+                <h2>Project 1</h2>
+                <p>Description Project 1</p>
+            <div class="project-2" style="border: 1px solid #ccc;">
+                <h2>Project 2</h2>
+                <p>Description Project 2</p>
+            <div class="project-3" style="border: 1px solid #ccc;">
+                <h2>Project 3</h2>
+                <p>Description Project 3</p>
         </article>
     </div>
     <div class="footer">
-        <p>c 2023 Ilham Fiqri Wirdayawan</p>
-        <a href="#">github</a>
-        <a href="#">facebook</a>
+        <p>© 2023 Ilham Fiqri Wirdayawan</p>
+        <a href="#">Github</a>
+        <a href="#">Facebook</a>
         <a href="#">LinkedIn</a>
     </div>
 </body>
